Bug 605457 - Remove concurrent use of Ogg stream hash table.  r=cpearce a=roc