content/media/ogg/nsOggCodecState.cpp
@@ -233,18 +233,36 @@ nsTheoraState::DecodeHeader(ogg_packet* aPacket)
 
 PRInt64
 nsTheoraState::Time(PRInt64 granulepos) {
-  if (granulepos < 0 || !mActive || mInfo.fps_numerator == 0) {
+  if (!mActive) {
+    return -1;
+  }
+  return nsTheoraState::Time(&mInfo, granulepos);
+}
+
+# define TH_VERSION_CHECK(_info,_maj,_min,_sub) \
+ ((_info)->version_major>(_maj)||(_info)->version_major==(_maj)&& \
+ ((_info)->version_minor>(_min)||(_info)->version_minor==(_min)&& \
+ (_info)->version_subminor>=(_sub)))
+
+PRInt64 nsTheoraState::Time(th_info* aInfo, PRInt64 aGranulepos)
+{
+  if (aGranulepos < 0 || aInfo->fps_numerator == 0) {
     return -1;
   }
   PRInt64 t = 0;
-  PRInt64 frameno = th_granule_frame(mCtx, granulepos);
+  // Implementation of th_granule_frame inlined here to operate
+  // on the th_info structure instead of the theora_state.
+  int shift = aInfo->keyframe_granule_shift; 
+  ogg_int64_t iframe = aGranulepos >> shift;
+  ogg_int64_t pframe = aGranulepos - (iframe << shift);
+  PRInt64 frameno = iframe + pframe - TH_VERSION_CHECK(aInfo, 3, 2, 1);
   if (!AddOverflow(frameno, 1, t))
     return -1;
   if (!MulOverflow(t, 1000, t))
     return -1;
-  if (!MulOverflow(t, mInfo.fps_denominator, t))
+  if (!MulOverflow(t, aInfo->fps_denominator, t))
     return -1;
-  return t / mInfo.fps_numerator;
+  return t / aInfo->fps_numerator;
 }
 
 PRInt64 nsTheoraState::StartTime(PRInt64 granulepos) {
@@ -373,12 +391,21 @@ PRBool nsVorbisState::Init()
 
 PRInt64 nsVorbisState::Time(PRInt64 granulepos)
 {
-  if (granulepos == -1 || !mActive || mDsp.vi->rate == 0) {
+  if (!mActive) {
+    return -1;
+  }
+
+  return nsVorbisState::Time(&mInfo, granulepos);
+}
+
+PRInt64 nsVorbisState::Time(vorbis_info* aInfo, PRInt64 aGranulepos)
+{
+  if (aGranulepos == -1 || aInfo->rate == 0) {
     return -1;
   }
   PRInt64 t = 0;
-  MulOverflow(1000, granulepos, t);
-  return t / mDsp.vi->rate;
+  MulOverflow(1000, aGranulepos, t);
+  return t / aInfo->rate;
 }
 
 nsSkeletonState::nsSkeletonState(ogg_page* aBosPage)
